@@ -1,7 +1,7 @@
 Package: tram
 Title: Transformation Models
-Version: 0.3-2
-Date: 2020-01-08
+Version: 0.3-3
+Date: 2020-01-16
 Authors@R: c(person("Torsten", "Hothorn", role = c("aut", "cre"),
                     email = "Torsten.Hothorn@R-project.org", comment = c(ORCID = "0000-0001-8301-0471")),
              person("Brian", "Ripley", role = "ctb"),
