@@ -11,13 +11,12 @@ importFrom("multcomp", "cftest", "adjusted_calpha", "univariate_calpha", "glht")
 importFrom("stats", "model.matrix", "coef", "vcov", "nobs", "predict", "quantile", "na.omit",
            "logLik", "model.response", "model.weights", "model.offset", "terms", "as.formula",
            "printCoefmat", "qqline", "qqplot", "qunif", "variable.names", "pchisq",
-           "model.frame", "pnorm", "qnorm", "sigma", "residuals")
+           "model.frame", "pnorm", "qnorm", "sigma", "residuals", "qchisq", "approx", "spline")
 import("Matrix")
 importFrom("survival", "survfit", "Surv")
 importFrom("graphics", "plot", "lines", "polygon")
-importFrom("stats", "qchisq")
 
-export(tram, tram_data, Coxph, Colr, Polr, Lm, BoxCox, Survreg, Lehmann, mtram)
+export(tram, tram_data, Coxph, Colr, Polr, Lm, BoxCox, Survreg, Lehmann, mtram, scoretest)
 
 S3method("as.mlt", "tram")
 S3method("model.matrix", "tram")
@@ -40,3 +39,4 @@ S3method("plot", "tram")
 S3method("update", "tram")
 S3method("residuals", "tram")
 S3method("profile", "tram")
+S3method("scoretest", "tram")
